bytehook/build/intermediates/cxx/Debug/4t1g3uo4/logs/x86_64/build_stdout_bytehook.txt
ninja: Entering directory `C:\Users\ts\AndroidStudioProjects\memoryTracer\bytehook\.cxx\Debug\4t1g3uo4\x86_64'
[1/27] Building C object CMakeFiles/bytehook.dir/bh_log.c.o
[2/27] Building C object CMakeFiles/bytehook.dir/bh_cfi.c.o
[3/27] Building C object CMakeFiles/bytehook.dir/bh_sleb128.c.o
[4/27] Building C object CMakeFiles/bytehook.dir/bh_linker_mutex.c.o
[5/27] Building C object CMakeFiles/bytehook.dir/bh_dl_iterate.c.o
[6/27] Building C object CMakeFiles/bytehook.dir/bh_jni.c.o
[7/27] Building C object CMakeFiles/bytehook.dir/bh_trampo_arm64.c.o
[8/27] Building C object CMakeFiles/bytehook.dir/bh_hook.c.o
[9/27] Building C object CMakeFiles/bytehook.dir/bh_core.c.o
[10/27] Building C object CMakeFiles/bytehook.dir/bh_trampo_arm.c.o
[11/27] Building C object CMakeFiles/bytehook.dir/bh_trampo_x86.c.o
[12/27] Building C object CMakeFiles/bytehook.dir/bh_linker.c.o
[13/27] Building C object CMakeFiles/bytehook.dir/bh_dl.c.o
[14/27] Building C object CMakeFiles/bytehook.dir/bh_task_manager.c.o
[15/27] Building C object CMakeFiles/bytehook.dir/bytehook.c.o
[16/27] Building C object CMakeFiles/bytehook.dir/bh_task.c.o
[17/27] Building C object CMakeFiles/bytehook.dir/bh_trampo_x86_64.c.o
[18/27] Building C object CMakeFiles/bytehook.dir/bh_recorder.c.o
[19/27] Building C object CMakeFiles/bytehook.dir/bh_dl_monitor.c.o
[20/27] Building C object CMakeFiles/bytehook.dir/hook.c.o
FAILED: CMakeFiles/bytehook.dir/hook.c.o 
C:\Users\ts\AppData\Local\Android\Sdk\ndk\23.2.8568313\toolchains\llvm\prebuilt\windows-x86_64\bin\clang.exe --target=x86_64-none-linux-android24 --gcc-toolchain=C:/Users/ts/AppData/Local/Android/Sdk/ndk/23.2.8568313/toolchains/llvm/prebuilt/windows-x86_64 --sysroot=C:/Users/ts/AppData/Local/Android/Sdk/ndk/23.2.8568313/toolchains/llvm/prebuilt/windows-x86_64/sysroot -Dbytehook_EXPORTS -IC:/Users/ts/AndroidStudioProjects/memoryTracer/bytehook/src/main/cpp/. -IC:/Users/ts/AndroidStudioProjects/memoryTracer/bytehook/src/main/cpp/include -IC:/Users/ts/AndroidStudioProjects/memoryTracer/bytehook/src/main/cpp/third_party/bsd -IC:/Users/ts/AndroidStudioProjects/memoryTracer/bytehook/src/main/cpp/third_party/lss -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -Wformat -Werror=format-security  -fno-limit-debug-info  -fPIC -std=c17 -Weverything -Werror -Oz -ffunction-sections -fdata-sections -MD -MT CMakeFiles/bytehook.dir/hook.c.o -MF CMakeFiles\bytehook.dir\hook.c.o.d -o CMakeFiles/bytehook.dir/hook.c.o -c C:/Users/ts/AndroidStudioProjects/memoryTracer/bytehook/src/main/cpp/hook.c
C:/Users/ts/AndroidStudioProjects/memoryTracer/bytehook/src/main/cpp/hook.c:60:1: error: unused function 'Java_com_bytedance_android_bytehook_NativeHook_nativeHook' [-Werror,-Wunused-function]
Java_com_bytedance_android_bytehook_NativeHook_nativeHook(JNIEnv *env, jclass clazz, jint type) {
^
C:/Users/ts/AndroidStudioProjects/memoryTracer/bytehook/src/main/cpp/hook.c:74:1: error: unused function 'Java_com_bytedance_android_bytehook_NativeHook_nativeUnhook' [-Werror,-Wunused-function]
Java_com_bytedance_android_bytehook_NativeHook_nativeUnhook(JNIEnv *env, jclass clazz) {
^
C:/Users/ts/AndroidStudioProjects/memoryTracer/bytehook/src/main/cpp/hook.c:89:1: error: unused function 'Java_com_bytedance_android_bytehook_NativeHook_nativeDumpRecords' [-Werror,-Wunused-function]
Java_com_bytedance_android_bytehook_NativeHook_nativeDumpRecords(JNIEnv *env, jclass clazz,
^
C:/Users/ts/AndroidStudioProjects/memoryTracer/bytehook/src/main/cpp/hook.c:98:13: error: unused function 'hacker_dump_records' [-Werror,-Wunused-function]
static void hacker_dump_records(JNIEnv *env, jobject thiz, jstring pathname) {
            ^
4 errors generated.
[21/27] Building C object CMakeFiles/bytehook.dir/bh_trampo.c.o
[22/27] Building C object CMakeFiles/bytehook.dir/bh_elf_manager.c.o
[23/27] Building C object CMakeFiles/bytehook.dir/bytesig.c.o
[24/27] Building C object CMakeFiles/bytehook.dir/bh_elf.c.o
[25/27] Building C object CMakeFiles/bytehook.dir/bh_hook_manager.c.o
[26/27] Building C object CMakeFiles/bytehook.dir/bh_util.c.o
ninja: build stopped: subcommand failed.
